--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     This is a header
 </h1>
 
-This is some text.
+This is some text.<br>
 <br>
 
 <a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a>
