--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 This is some text.<br>
 <br>
 
-<a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a><br><br>
+<a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a>
+<br><br>
 <a href="/secondpage.html">Here's a boring second page</a>
