--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ This is some text.<br>
 
 <a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a>
 <br><br>
-<a href="/secondpage.html">Here's a boring second page</a>
+<a href="/stuffs/secondpage.html">Here's a boring second page</a>
