--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
-<h1>
-    This is a header
-</h1>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu" rel="stylesheet">
+</head>
 
-This is some text.<br>
-<br>
 
-<a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a>
-<br><br>
-<a href="/stuffs/secondpage.html">Here's a boring second page</a>
+<div id="header" class="cdiv">
+    <div id="subheader" class="cdiv">
+        <h1>
+            Ian Rubenstein
+        </h1>
+        <h4>rubenstein.ian@gmail.com</h4>
+    </div>
+</div>
+
+<section>
+
+    <div id="leftdiv">
+        <a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a>
+        <br><br>
+        <a href="/stuffs/secondpage.html">Here's a boring second page</a>
+    </div>
+    <div id="rightdiv">This is some text.<br>
+        <br>
+    </div>
+</section><br>
+
+
+
+<div id="countdown">
+<iframe width="100vw" id="if" src="https://h.rustypaper.com">
+</div>
+
+
+</html>
