--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu" rel="stylesheet">
 </head>
 
@@ -18,7 +18,7 @@
 
     <div id="leftdiv">
         <a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a>
-        <br><br>
+        <br>
         <a href="/stuffs/secondpage.html">Here's a boring second page</a>
     </div>
     <div id="rightdiv">This is some text.<br>
