--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           </div>
           <div class="col cc">
             <h4>Links:<h4>
-             <a href='https://rusty-flask.herokuapp.com' target="_about">Basic Flask Site</a>
-                  <a href="/stuffs/secondpage.html">Here's a boring second page</a>
+             <a href='https://rusty-flask.herokuapp.com' target="_about">Basic Flask Site</a><br>
+             <a href="/stuffs/secondpage.html">Here's a boring second page</a>
           </div>
         </div>
 
