--- a/stuffs/secondpage.html
+++ b/stuffs/secondpage.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" crossorigin="anonymous"></script>
 </head>
 
-<body onload="cd();">
+<body>
 <div id="header" class="cdiv">
     <div id="subheader" class="cdiv">
         <h1>
@@ -27,25 +27,10 @@
 
 
 <div id="countdown">
+<iframe id=if src="https://h.rustypaper.com">
 </div>
 
 
 
-<script>
-function cd(){
-        $.ajax({
-              type: 'GET',
-              url: `${'https://h.rustypaper.com'}`,
-
-              beforeSend: function(xhr){
-                 $('#countdown').html('<div class="loader"> </div>');
-              },
-
-              success: function(msg){
-                 $('#countdown').html(msg);
-              }
-            });
-}
-</script>
 </body>
 </html>
