--- a/stuffs/secondpage.html
+++ b/stuffs/secondpage.html
@@ -16,12 +16,13 @@
 </div>
 
     <div id="leftdiv">
-        <a href="https://rusty-flask.herokuapp.com/">Here's A better site.</a>
-        <br>
-        <a href="/index.html">Here's a pretty page</a>
+            <h4>Languages:</h4>
+            Python, SQL, HTML, CSS, JS, Groovy, Terraform
     </div>
-    <div id="rightdiv">This is some text.<br>
+    <div id="rightdiv">        
+        <a href="https://rusty-flask.herokuapp.com/">Basic Flask Site</a>
         <br>
+        <a href="/index.html">This site with bootstrap</a>
     </div>
 
 
