--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
 
             <tr>
               <th scope="row">🐶Just Dogs🐶</th>
-              <td>A site demonstrating basic Flask functionality<br>with downloadable code examples.</td>
-              <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">Just Dogs</a></td>
+              <td>A collection of many dog breeds.</td>
+              <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">AllTheDogs</a></td>
               <td>Python, HTML, CSS, JS, Heroku</td>
-              <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">rusty-flask.herokuapp.com</a></td>
+              <td><a href="https://github.com/hapticPaper/allthedogs" target="_blank">justdogs.herokuapp.com</a></td>
             </tr>
 
 
             <tr>
-              <th scope="row">RustyFlask</th>
-              <td>A site demonstrating basic Flask functionality<br>with downloadable code examples.</td>
-              <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">helloFlask</a></td>
+              <th scope="row">Python Instructional</th>
+              <td>A collection of Jupyter Notebooks explaingng core python concepts.</td>
+              <td><a href="https://github.com/hapticPaper/PythonInstructional" target="_blank">PythonInstuctional</a></td>
               <td>Python, HTML, CSS, JS, Heroku</td>
-              <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">rusty-flask.herokuapp.com</a></td>
+              <td><a href="https://hapticpaper.github.io/PythonInstructional/" target="_blank">Coming Soon...</a></td>
             </tr>
 
             </tbody>
