--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <th scope="row">Rusty Countdown</th>
               <td>A Flask site using BQ and Heroku, counting<br>down to the end of the <i>next</i> presidental election.</td>
               <td><a href="https://github.com/hapticPaper/rustyCountdown" target="_blank">Coming Soon...</a></td>
-              <td>Python, GCP BigQuery, HTML, CSS, JS, Heroku</td>
+              <td>Python, GCP BigQuery, HTML,<br>CSS, JS, Heroku</td>
               <td><a href="https://rustypaper.herokuapp.com" target="_blank">h.rustypaper.com</a></td>
             </tr>
 
@@ -102,7 +102,7 @@
 
             <tr>
               <th scope="row">Python Instructional</th>
-              <td>A collection of Jupyter Notebooks explaingng core python concepts.</td>
+              <td>A collection of Jupyter Notebooks explaingng<br>core python concepts.</td>
               <td><a href="https://github.com/hapticPaper/PythonInstructional" target="_blank">PythonInstuctional</a></td>
               <td>Python, HTML, CSS, JS, Heroku</td>
               <td><a href="https://hapticpaper.github.io/PythonInstructional/" target="_blank">Coming Soon...</a></td>
