--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <th scope="row">Rusty Flask</th>
               <td>A site demonstrating basic Flask functionality<br>with downloadable code examples.</td>
               <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">helloFlask</a></td>
-              <td>Python, HTML, CSS, JS, Heroku</td>
+              <td>Python, Flask, HTML, CSS, JS,<br>Heroku</td>
               <td><a href="https://rusty-flask.herokuapp.com" target="_blank">rusty-flask.herokuapp.com/</a></td>
             </tr>
 
@@ -99,12 +99,21 @@
               <td><a href="https://github.com/hapticPaper/allthedogs" target="_blank">justdogs.herokuapp.com</a></td>
             </tr>
 
+             <tr>
+              <th scope="row">Covid Analysis</th>
+               <td>Animating the daily data from<br><a href="https://github.com/CSSEGISandData/COVID-19">github.com/CSSEGISandData/COVID-19</a></td>
+              <td><a href="https://github.com/hapticPaper/covid-analysis/" target="_blank">covid-analysis</a></td>
+              <td>Python, Postgres</td>
+              <td><a href="https://hapticpaper.github.io/covid-analysis/" target="_blank">hapticpaper.github.io/covid-analysis</a></td>
+            </tr>
+
+
 
             <tr>
               <th scope="row">Python Instructional</th>
               <td>A collection of Jupyter Notebooks explaingng<br>core python concepts.</td>
               <td><a href="https://github.com/hapticPaper/PythonInstructional" target="_blank">PythonInstuctional</a></td>
-              <td>Python, HTML, CSS, JS, Heroku</td>
+              <td>Python, Jupyter Notebook, Markdown</td>
               <td><a href="https://hapticpaper.github.io/PythonInstructional/" target="_blank">Coming Soon...</a></td>
             </tr>
 
@@ -120,7 +129,7 @@
 
     <!-- Third Row  -->
     <div class="row">
-      <iframe id=bsif width="100vw" src="https://h.rustypaper.com">
+      <iframe id=bsif width="100vw" src="https://h.rustypaper.com"></iframe>
 
 
     </div>
