--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         <div class="row">
           <div class="col-2"></div>
           <div class="col-8 cc">
-            <h4>Languages:</h4>
-            Python, SQL, HTML, CSS, JS, Groovy, Terraform
+            <h4>Tech:</h4>
+            Python, SQL, HTML, CSS, JS, Groovy, Docker, Tensorflow<br>
+            GCP BigQuery, AppEngine, Compute, Kubernetes, GSuite, IAM, Mgmt APIs<br>
+            Azure AD, Roles, Log Analytics, Compute, Cosmos, Mgmt APIs<br>
+            AWS IAM, Redshift, VMs (Frankly, its been a while for AWS...)
           </div>
 
           <div class="col-2"></div>
