--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <tr>
               <th scope="row">Rusty Countdown</th>
-              <td>A Flask site using BQ and Heroku, counting<br>down to the end of the <i>next</i> presidental election.</td>
+              <td>A Flask site using BQ and Heroku, counting<br>down to the end of the <i>current</i> presidental election.</td>
               <td><a href="https://github.com/hapticPaper/rustyCountdown" target="_blank">Coming Soon...</a></td>
               <td>Python, GCP BigQuery, HTML,<br>CSS, JS, Heroku</td>
               <td><a href="https://rustypaper.herokuapp.com" target="_blank">h.rustypaper.com</a></td>
