--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <td>A site demonstrating basic Flask functionality<br>with downloadable code examples.</td>
               <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">helloFlask</a></td>
               <td>Python, Flask, HTML, CSS, JS,<br>Heroku</td>
-              <td><a href="https://rusty-flask.herokuapp.com" target="_blank">rusty-flask.herokuapp.com/</a></td>
+              <td><a href="https://rusty-flask.herokuapp.com" target="_blank">rusty-flask.herokuapp.com</a></td>
             </tr>
 
             <tr>
@@ -91,7 +91,7 @@
               <td>A Flask site using BQ and Heroku, counting<br>down to the end of the <i>current</i> presidental election.</td>
               <td><a href="https://github.com/hapticPaper/rustyCountdown" target="_blank">Coming Soon...</a></td>
               <td>Python, GCP BigQuery, HTML,<br>CSS, JS, Heroku</td>
-              <td><a href="https://rustypaper.herokuapp.com" target="_blank">h.rustypaper.com</a></td>
+              <td><a href="https://rustypaper.herokuapp.com" target="_blank">h.rustypaper.com<br>rustypaper.com</a></td>
             </tr>
 
             <tr>
@@ -117,8 +117,17 @@
               <td>A collection of Jupyter Notebooks explaingng<br>core python concepts.</td>
               <td><a href="https://github.com/hapticPaper/PythonInstructional" target="_blank">PythonInstuctional</a></td>
               <td>Python, Jupyter Notebook, Markdown</td>
-              <td><a href="https://hapticpaper.github.io/PythonInstructional/" target="_blank">Coming Soon...</a></td>
+              <td><a href="https://hapticpaper.github.io/PythonInstructional/" target="_blank">hapticpaper.github.io/PythonInstructional</a></td>
             </tr>
+
+            <tr>
+              <th scope="row">Rusty Dev</th>
+              <td>A barebones HTML and JS editor<br>and renderer.</td>
+              <td><a href="https://github.com/hapticPaper/rustydev" target="_blank">RustyDev</a></td>
+              <td>HTML, JS, Bootstrap</td>
+              <td><a href="https://hapticpaper.github.io/rustydev/" target="_blank">hapticpaper.github.io/rustydev</a></td>
+            </tr>
+
 
             </tbody>
           </table>
