--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   <title>Ian Rubenstein</title>
-
+  <link rel="icon" href="favicon.png" type="image/gif">
   <!-- Bring in our bootstrap stylesheet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col-1"></div>
       <div class="col-10">
-        <div class="alert alert-primary" role="alert" style="text-align: center;">
+        <div class="alert alert-primary" role="alert" style="text-align: center; background-color: #D7C49EFF; color:#343148FF;">
 
             <h1>Ian Rubenstein</h1>
             <h4><a href="mailto:rubenstein.ian@gmail.com">rubenstein.ian@gmail.com</a> </h4>
@@ -68,7 +68,7 @@
 
       <div class="col-10 projecttable">
           <table class="table table-sm pt">
-            <thead class="thead-dark">
+            <thead class="" style="color:#D7C49EFF; background-color:#343148FF">
             <tr>
               <th scope="col">Project</th>
               <th scope="col" class="desc">Description</th>
@@ -105,9 +105,9 @@
              <tr>
               <th scope="row">Covid Analysis</th>
                <td>Animating the daily data from<br><a href="https://github.com/CSSEGISandData/COVID-19">github.com/CSSEGISandData/COVID-19</a></td>
-              <td><a href="https://github.com/hapticPaper/covid-analysis/" target="_blank">covid-analysis</a></td>
+              <td><a href="https://github.com/hapticPaper/covid-sqlite" target="_blank">covid-analysis</a></td>
               <td>Python, Postgres</td>
-              <td><a href="https://hapticpaper.github.io/covid-analysis/" target="_blank">hapticpaper.github.io/covid-analysis</a></td>
+              <td><a href="https://hapticpaper.github.io/covid-sqlite/" target="_blank">hapticpaper.github.io/covid-analysis</a></td>
             </tr>
 
 
@@ -126,6 +126,22 @@
               <td><a href="https://github.com/hapticPaper/rustydev" target="_blank">RustyDev</a></td>
               <td>HTML, JS, Bootstrap</td>
               <td><a href="https://hapticpaper.github.io/rustydev/" target="_blank">hapticpaper.github.io/rustydev</a></td>
+            </tr>
+
+            <tr>
+              <th scope="row">Rusty API Stack</th>
+              <td>A Flask API serving the data for 2<br>different frontends.</td>
+              <td><a href="https://github.com/hapticPaper/rusty-api" target="_blank">Rusty API</a><br>
+                <a href="https://github.com/hapticPaper/rusty-frontend" target="_blank">Rusty Frontend</a><br>
+              </td>
+              <td>Python Flask, HTML, JS, Bootstrap</td>
+              <td>
+                
+                <a href="https://rusty-api.herokuapp.com" target="_blank">rusty-api.herokuapp.com</a>
+                <br>
+                <a href="https://hapticpaper.github.io/rusty-frontend/" target="_blank">hapticpaper.github.io/rusty-frontend</a>
+                
+              </td>
             </tr>
 
 
