--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col-1"></div>
       <div class="col-10">
-        <div class="alert alert-primary" role="alert" style="text-align: center; background-color: #D7C49EFF; color:#343148FF;">
+        <div class="alert alert-primary uglybox" role="alert" style="">
 
             <h1>Ian Rubenstein</h1>
             <h4><a href="mailto:rubenstein.ian@gmail.com">rubenstein.ian@gmail.com</a> </h4>
@@ -68,7 +68,7 @@
 
       <div class="col-10 projecttable">
           <table class="table table-sm pt">
-            <thead class="" style="color:#D7C49EFF; background-color:#343148FF">
+            <thead>
             <tr>
               <th scope="col">Project</th>
               <th scope="col" class="desc">Description</th>
@@ -95,7 +95,7 @@
             </tr>
 
             <tr>
-              <th scope="row">🐶Just Dogs🐶</th>
+              <th scope="row">Just Dogs🐶</th>
               <td>A collection of many dog breeds.</td>
               <td><a href="https://github.com/hapticPaper/helloFlask" target="_blank">AllTheDogs</a></td>
               <td>Python, HTML, CSS, JS, Heroku</td>
