--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html lang="en-us">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127859074-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-127859074-6');
+
+  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+  ga('create', 'UA-127859074-5', 'auto');
+  ga('send', {
+                hitType: 'event',
+                eventCategory: `hapticBio Read - ${new Date()}`,
+                eventAction: 'hapticpaper.github.io Landing',
+                eventLabel: 'hapticpaper.github.io'
+              }
+    );
+  </script>
+
 
   <meta charset="UTF-8">
   <title>Ian Rubenstein</title>
