--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Third Row  -->
     <div class="row">
-      <iframe id=bsif width="100vw" src="https://h.rustypaper.com"></iframe>
+      <iframe id=bsif src="https://h.rustypaper.com"></iframe>
 
 
     </div>
