--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Bio, projects, and CV" />
+    <meta
+      name="description"
+      content="Software architect building data, platform, and agentic pipeline systems — plus selected projects, repositories, and CV."
+    />
+    <meta name="theme-color" content="#fbf6ee" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#07070b" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&family=Inter:wght@400;500;600;700&display=swap"
+    />
     <title>hapticpaper</title>
   </head>
   <body>
